# vrpc-py

./: .gitignore  LICENSE  README.md  pyproject.toml  release.sh  requirements.txt
.github/workflows/: ci.yml
tests/adapter/: test_adapter.py  test_adpater.py
tests/adapter/fixtures/: sample_class_doc.py  sample_class_no_doc.py  test_class_doc.py  test_class_no_doc.py  test_dirname.py
tests/adapter/fixtures/nested/: test_class_nested.py
tests/agent/: Dockerfile  docker-compose.yml  requirements.txt  test.sh  test_agent.py
vrpc/: __init__.py  adapter.py  agent.py  client.py  public.py
vrpc-env/: pyvenv.cfg
