[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vrpc"
version = "3.0.0"
description = "Asynchronous remote procedure calls for Python over MQTT"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Dr. Burkhard C. Heisen", email = "burkhard.heisen@heisenware.com"}
]
keywords = ["rpc", "mqtt", "async", "iot", "remote-procedure-call"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core dependencies needed to run the package
dependencies = [
    "aiomqtt>=2.0.0",
    "nanoid>=2.0.0",
    "docstring-parser>=0.15",
    "pyee>=11.1.0"
]

# Optional dependencies for development and testing
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock"
]

[project.urls]
Homepage = "https://vrpc.io"
Repository = "https://github.com/heisenware/vrpc-py"
Issues = "https://github.com/heisenware/vrpc-py/issues"

[tool.pytest.ini_options]
norecursedirs = "tests/adapter/fixtures"
asyncio_mode = "auto"
